# modernCpp

./: .gitignore  CMakeLists.txt  README.md
include/: math_utils.hpp
src/: main.cpp  math_utils.cpp
tests/: test_math.cpp
